<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bourgeois.michel.relativesinglescreenapp.MainActivity">

    <ImageView
        android:id="@+id/toppicture"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/danielarias" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/header_text"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="@dimen/description_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:text="@string/phone_text"
        android:textColor="@color/content_text_color"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/number_text"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="normal" />

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="2dp"
        android:background="#ff6600" />


    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:text="@string/address_text"
        android:textColor="#000"
        android:textSize="@dimen/description_text_size"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:paddingBottom="1dp"
        android:text="@string/title_text"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="@dimen/description_text_size" />


    <TextView
        android:id="@+id/thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:paddingBottom="5dp"
        android:text="@string/thursday_text"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="@dimen/description_text_size" />


    <TextView
        android:id="@+id/hour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:paddingBottom="5dp"
        android:text="@string/hour_text"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="@dimen/description_text_size" />



        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/button" />


</LinearLayout>





